css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Lato&family=Roboto+Condensed&display=swap");

/* ==== General styles starts ==== */
:root {
  --color-code1: white;
  --color-code2: orange;
  --color-code3: #000000;
  --bar-height: 4em;
  /* #4d4c5c */
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: inherit;
}

body {
  font: 16px "Roboto Condensed", sans-serif;
}

#home,
#contact {
  background: url("../images/bg.jpg");
  background-attachment: fixed;
  background-size: cover;
}

h1 {
  font-size: 3em;
}

h2 {
  font-size: 2.25em;
}

h3,
i {
  font-size: 1.5em;
}

p {
  font-size: 1.25em;
}

.align-c {
  align-items: center;
}

.bar-height {
  height: var(--bar-height);
}

.bg-color-code1 {
  background-color: var(--color-code1);
}

.bg-color-code2 {
  background-color: var(--color-code2);
}

.bg-color-code3 {
  background-color: var(--color-code3);
}

.color-code1 {
  color: var(--color-code1);
}

.color-code2 {
  color: var(--color-code2);
}

.color-code3 {
  color: var(--color-code3);
}

.ff-lato {
  font-family: "Lato", sans-serif;
}

.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.gy-1p {
  gap: 4px;
}

.gy-1 {
  gap: 1em;
}

.gy-2 {
  gap: 2em;
}

.gy-3 {
  gap: 3em;
}

hr {
  border: 2px solid var(--color-code2);
}

img {
  max-width: 300px;
  object-fit: cover;
  aspect-ratio: 1.2 / 1;
}

.justify-c {
  justify-content: center;
}

.min-height-100v {
  min-height: calc(100vh - (var(--bar-height) * 2 + 4px));
}

.mt-4 {
  margin-top: 4em;
}

.p-8p {
  padding: 0.5em;
}

.p-2 {
  padding: 2em;
}

.pb-1 {
  padding-bottom: 1em;
}

.pb-2 {
  padding-bottom: 2em;
}

.pb-4 {
  padding-bottom: 4em;
}

.pe-2 {
  padding-right: 2em;
}

.ps-1 {
  padding-left: 1em;
}

.ps-2 {
  padding-left: 2em;
}

.ps-3 {
  padding-left: 3em;
}

.pt-1 {
  padding-top: 1em;
}

.pt-2 {
  padding-top: 2em;
}

.pt-4 {
  padding-top: 4em;
}

.title-font {
  font-family: "Carter One", cursive;
}

.wrap {
  flex-wrap: wrap;
}
/* ==== General styles ends ==== */

/* ==== Navigation styles starts ==== */
.width-100 {
  width: 100%;
}

#navbar {
  justify-content: flex-end;
  position: fixed;
  top: 0;
}

#navbar a {
  margin-right: 1em;
  padding: 0.375em;
  font-size: 1.25em;
}

#navbar a:hover {
  color: var(--color-code2);
}
/* ==== Navigation styles ends ==== */

/* ==== Home styles starts ==== */
#name-tag {
  max-width: 70%;
}
/* ==== Home styles ends ==== */

/* ==== Bio page styles starts ==== */
.round {
  border-radius: 50%;
  height: 300px;
}

.container {
  width: 80%;
}
/* ==== Bio page styles ends ==== */

/* ==== Portfolio & contact styles starts ==== */
.category {
  color: #4d4c5c;
}

.profile-link:hover {
  color: var(--color-code2);
  background-color: var(--color-code1);
}

.project-title {
  font-size: 1.25em;
  padding-bottom: 0.25em;
}

.tile {
  border-radius: 5px;
  aspect-ratio: 2 / 1.7;
  padding: 0.5em;
}

.tile img,
object {
  object-fit: cover;
  border-radius: 3px;
  aspect-ratio: 1 / 0.6;
}

/* ==== Portfolio & contact styles ends ==== */
@media only screen and (width: 1440px) {
  #projects-container {
    padding: 2.5em;
    justify-content: unset;
  }
}

@media only screen and (max-width: 1024px) {
  #projects-container {
    gap: 1.5em;
  }
}

@media only screen and (max-width: 768px) {
  h1 {
    font-size: 2.75em;
  }

  h2 {
    font-size: 2em;
  }

  h3 {
    font-size: 1.25em;
  }

  footer,
  .category {
    font-size: 0.75em;
  }

  .min-height-100v {
    min-height: calc(100vh - (var(--bar-height) * 2 - 12px));
  }

  .ps-3 {
    padding-left: 1em;
  }

  .round {
    width: 250px;
    height: 250px;
  }

  p,
  .project-title,
  #navbar a {
    font-size: 1em;
  }

  #navbar a {
    margin-right: 0.75em;
  }

  .container {
    width: 100%;
  }

  .tile {
    aspect-ratio: 1.5 / 1.2;
  }
}

@media only screen and (max-width: 576px) {
  h1 {
    font-size: 2.5em;
  }

  h2 {
    font-size: 1.75em;
  }

  h3,
  #repo i {
    font-size: 1em;
  }

  #navbar {
    justify-content: space-around;
  }

  #navbar a {
    margin-right: 0;
  }

  #name-tag {
    max-width: 100%;
  }

  p,
  .project-title {
    font-size: 0.75em;
  }

  .round {
    width: 200px;
    height: 200px;
  }

  #elevator-pitch > h2 {
    font-size: 1.5em;
  }

  video {
    width: 450px;
  }

  #projects-container {
    gap: 1em;
  }

  .img,
  object {
    max-width: 230px;
  }

  .tile {
    gap: 0.5em;
  }
}

@media only screen and (max-width: 428px) {
  h1 {
    font-size: 2.25em;
  }

  .container {
    flex-direction: column-reverse;
    align-items: center;
  }

  .img,
  object {
    max-width: 155px;
    aspect-ratio: 1.2 / 1;
  }

  .tile {
    aspect-ratio: 1.5 / 1.35;
    gap: 0.5em;
  }

  video {
    width: 350px;
  }

  #elevator-pitch > h2 {
    font-size: 1em;
  }

  #contact > div {
    gap: 1em;
  }
}

@media only screen and (max-width: 375px) {
  h1 {
    font-size: 2.25em;
  }

  h2 {
    font-size: 1.5em;
  }

  .tile {
    aspect-ratio: 1.5 / 1.4;
    gap: 0.3em;
  }

  .tile div {
    padding-left: unset;
  }

  .img,
  object {
    max-width: 140px;
  }

  #repo {
    gap: 1.5em;
  }

  #repo div {
    gap: 0.5em;
  }

  #contact > h1 {
    font-size: 1.75em;
  }
}

@media only screen and (max-width: 320px) {
  h1 {
    font-size: 2em;
  }

  h2 {
    font-size: 1.2em;
  }

  h3,
  #repo i {
    font-size: 0.9375em;
  }

  #name-tag {
    align-items: center;
    padding-left: unset;
  }

  #elevator-pitch > h2 {
    font-size: 0.75em;
  }

  video {
    width: 290px;
  }

  #projects-container {
    gap: 0.75em;
  }

  .tile {
    aspect-ratio: 1.5 / 1.4;
    gap: 0.2em;
  }

  .img,
  object {
    max-width: 130px;
  }

  #repo > h3 {
    padding-left: 1em;
  }

  #contact > div {
    gap: 0.75em;
  }
}

